--- a/index.css
+++ b/index.css
@@ -1,34 +1,85 @@
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    line-height: 2rem;
 }
+
+/* RESPONSIVE NAV BAR */
+
+.navbar {
+    overflow: hidden;
+  }
+  
+  .navbar a:hover {
+    color: #ddd;
+  }
+  
+  .navbar .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
+  /* MAIN */
 
 header li {
     list-style: none;
     display: inline-block;
-    padding: 0 20px;
+    padding: 1rem;
 }
 
 header {
     display: flex;
     justify-content: flex-end;
+    margin: 3rem;
 }
+
 
 .title {
     font-family: 'Space Grotesk', sans-serif;
+    font-size: 2rem;
 }
 
 main {
-    display: grid;
-    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    margin: 5rem;
+    width: 80%;
+    padding-left: 3rem;
 }
 
 a {
     color: black;
 }
 
+.fa-arrow-right {
+    padding-left: .5rem;
+}
+
 footer li {
     list-style: none;
     display: inline-block;
-    padding: 0 20px;
+    padding: 0.5rem;
+    margin-left: 5rem;
 }
 
