--- a/projects.css
+++ b/projects.css
@@ -24,7 +24,6 @@ main {
 }
 
 
-
 a {
     color: black;
 }
@@ -50,9 +49,8 @@ footer li {
     flex-wrap: wrap;
     background-color: #ffffff;
     border-radius: 10px;
-    width: 80%;
+    width: 90%;
 }
-
 
 .project-grid-item li {
     list-style-type: none;
@@ -61,4 +59,5 @@ footer li {
 .project-image img {
     border-radius: 10px 10px 0px 0px;
     width: 100%;
+    height: 100%;
 }
