--- a/Final_Project/projects.css
+++ b/Final_Project/projects.css
@@ -34,6 +34,42 @@ footer li {
     padding: 0 20px;
 }
 
+/* RESPONSIVE NAV BAR */
+
+.navbar {
+    overflow: hidden;
+  }
+  
+  .navbar a:hover {
+    color: #ddd;
+  }
+  
+  .navbar .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
 /* GRID */
 
 .project-grid-container {
