--- a/Final_Project/index.css
+++ b/Final_Project/index.css
@@ -2,6 +2,74 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 1rem;
   line-height: 2rem;
+  background-image: linear-gradient(to bottom right, rgb(255, 231, 183), rgb(255, 255, 255));
+}
+
+.dark-mode {
+  background-image: linear-gradient(to bottom right, rgb(57, 38, 0), rgb(0, 0, 0));
+  color: rgb(255, 249, 221);
+}
+
+.dark-mode a {
+  color: white;
+}
+
+.dark-mode i {
+  color: rgb(126, 103, 103);
+
+}
+
+.dark-mode .btn {
+  background-color: transparent;
+  border: none; 
+  color: white;
+  font-size: 1rem; 
+  cursor: pointer;
+}
+
+/* a {
+  color: black;
+  text-decoration: none;
+} */
+
+a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
+
+
+.btn {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: rgb(209, 207, 207);
 }
 
 /* RESPONSIVE NAV BAR */
@@ -10,35 +78,32 @@ body {
   overflow: hidden;
 }
 
-.navbar a:hover {
-  color: #ddd;
-}
-
-.navbar .icon {
+.hamburger-icon {
   display: none;
 }
 
-@media screen and (max-width: 600px) {
-  .navbar a:not(:first-child) {display: none;}
-  .navbar a.icon {
-    float: right;
-    display: block;
-  }
-}
 
 @media screen and (max-width: 600px) {
-  .navbar.responsive {position: relative;}
-  .navbar.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+
+  .nav-item {
+    display: flex;
+    flex-direction: column;
+    padding: .5rem;
   }
-  .navbar.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
-}
+
+  .footer li {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  }
+
 
 /* MAIN */
 
@@ -68,9 +133,6 @@ main {
   padding-left: 3rem;
 }
 
-a {
-  color: black;
-}
 
 .fa-arrow-right {
   padding-left: .5rem;
