--- a/index.css
+++ b/index.css
@@ -1,85 +1,151 @@
+/* BODY */
+
 body {
-    font-family: 'Lato', sans-serif;
-    font-size: 1rem;
-    line-height: 2rem;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  line-height: 2rem;
+  background: rgb(190, 244, 255);
+  background: radial-gradient(circle, rgb(142, 217, 254) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
-/* RESPONSIVE NAV BAR */
+/* NAV */
 
-.navbar {
-    overflow: hidden;
-  }
-  
-  .navbar a:hover {
-    color: #ddd;
-  }
-  
-  .navbar .icon {
-    display: none;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .navbar a:not(:first-child) {display: none;}
-    .navbar a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .navbar.responsive {position: relative;}
-    .navbar.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .navbar.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
-
-  /* MAIN */
-
-header li {
-    list-style: none;
-    display: inline-block;
-    padding: 1rem;
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 5rem;
+  margin: 3rem;
+  list-style: none;
 }
 
-header {
-    display: flex;
-    justify-content: flex-end;
-    margin: 3rem;
-}
-
-
-.title {
-    font-family: 'Space Grotesk', sans-serif;
-    font-size: 2rem;
-}
+/* MAIN */
 
 main {
-    display: flex;
-    justify-content: center;
-    margin: 5rem;
-    width: 80%;
-    padding-left: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  height: 70%;
+  margin: auto;
 }
 
-a {
-    color: black;
+h1 {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 2rem;
+  padding: 0px;
 }
 
 .fa-arrow-right {
-    padding-left: .5rem;
+  padding-left: .5rem;
 }
 
-footer li {
-    list-style: none;
-    display: inline-block;
-    padding: 0.5rem;
-    margin-left: 5rem;
+main ul {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  list-style: none;
+}
+
+/* EFFECTS */
+
+.dark-mode {
+  background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 43%, rgba(9, 9, 121, 1) 100%, rgba(0, 212, 255, 1) 100%);
+  color: rgb(255, 255, 255);
+}
+
+.dark-mode a {
+  color: white;
+}
+
+.dark-mode .btn {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.darkmode a:hover {
+  color: rgb(209, 207, 207);
+}
+
+a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color:  rgb(73, 73, 73);
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(73, 73, 73);
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
+
+.btn {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: rgb(73, 73, 73);
+}
+
+/* media query */
+
+@media screen and (max-width: 600px) {
+
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: .5rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: 0;
+    padding: .5rem;
+    background-color: rgba(190, 244, 255, 0.771);
+    border-radius: 0px 0px 0px 10px;
+    width: 20%;
+  }
+
+  .dark-mode nav ul {
+    background-color: rgba(0, 0, 0, 0.832);
+    border-radius: 0px 0px 0px 10px;
+    width: 20%;
+  }
+
+  main {
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+  }
 }
 
