--- a/Final_Project/index.css
+++ b/Final_Project/index.css
@@ -1,36 +1,81 @@
+/* BODY */
+
 body {
+  margin: 0;
+  border: 0;
+  padding: 0;
   font-family: 'Lato', sans-serif;
   font-size: 1rem;
   line-height: 2rem;
-  background-image: linear-gradient(to bottom right, rgb(255, 231, 183), rgb(255, 255, 255));
+  background: rgb(190, 244, 255);
+  background: radial-gradient(circle, rgb(142, 217, 254) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
+/* NAV */
+
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 5rem;
+  margin: 3rem;
+  list-style: none;
+}
+
+/* MAIN */
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  height: 70%;
+  margin: auto;
+}
+
+h1 {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 2rem;
+  padding: 0px;
+}
+
+.fa-arrow-right {
+  padding-left: .5rem;
+}
+
+main ul {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  list-style: none;
+}
+
+/* EFFECTS */
+
 .dark-mode {
-  background-image: linear-gradient(to bottom right, rgb(57, 38, 0), rgb(0, 0, 0));
-  color: rgb(255, 249, 221);
+  background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 43%, rgba(9, 9, 121, 1) 100%, rgba(0, 212, 255, 1) 100%);
+  color: rgb(255, 255, 255);
 }
 
 .dark-mode a {
   color: white;
 }
 
-.dark-mode i {
-  color: rgb(126, 103, 103);
-
-}
-
 .dark-mode .btn {
   background-color: transparent;
-  border: none; 
+  border: none;
   color: white;
-  font-size: 1rem; 
+  font-size: 1rem;
   cursor: pointer;
 }
 
-/* a {
-  color: black;
-  text-decoration: none;
-} */
+.darkmode a:hover {
+  color: rgb(209, 207, 207);
+}
 
 a {
   position: relative;
@@ -39,7 +84,7 @@ a {
 }
 
 a:hover {
-  color: #000;
+  color:  rgb(73, 73, 73);
 }
 
 a::before {
@@ -50,7 +95,7 @@ a::before {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #000;
+  background-color: rgb(73, 73, 73);
   transform: scaleX(0);
   transition: transform 0.3s ease;
 }
@@ -58,7 +103,6 @@ a::before {
 a:hover::before {
   transform: scaleX(1);
 }
-
 
 .btn {
   background-color: transparent;
@@ -69,78 +113,39 @@ a:hover::before {
 }
 
 .btn:hover {
-  color: rgb(209, 207, 207);
+  color: rgb(73, 73, 73);
 }
 
-/* RESPONSIVE NAV BAR */
-
-.navbar {
-  overflow: hidden;
-}
-
-.hamburger-icon {
-  display: none;
-}
-
+/* media query */
 
 @media screen and (max-width: 600px) {
 
-  .nav-item {
+  nav ul {
     display: flex;
     flex-direction: column;
+    align-items: end;
+    gap: .5rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: 0;
     padding: .5rem;
+    background-color: rgba(190, 244, 255, 0.771);
+    border-radius: 0px 0px 0px 10px;
+    width: 20%;
   }
 
-  .main {
-    display: flex;
+  .dark-mode nav ul {
+    background-color: rgba(0, 0, 0, 0.832);
+    border-radius: 0px 0px 0px 10px;
+    width: 20%;
+  }
+
+  main {
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    margin: auto;
   }
-
-  .footer li {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  }
-
-
-/* MAIN */
-
-header li {
-  list-style: none;
-  display: inline-block;
-  padding: 1rem;
 }
 
-header {
-  display: flex;
-  justify-content: flex-end;
-  margin: 3rem;
-}
-
-
-.title {
-  font-family: 'Space Grotesk', sans-serif;
-  font-size: 2rem;
-}
-
-main {
-  display: flex;
-  justify-content: center;
-  margin: 5rem;
-  width: 80%;
-  padding-left: 3rem;
-}
-
-
-.fa-arrow-right {
-  padding-left: .5rem;
-}
-
-footer li {
-  list-style: none;
-  display: inline-block;
-  padding: 0.5rem;
-  margin-left: 5rem;
-}
