--- a/contact.css
+++ b/contact.css
@@ -1,91 +1,164 @@
+/* BODY */
+
 body {
-    font-family: 'Lato', sans-serif;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  line-height: 2rem;
+  background: rgb(190, 244, 255);
+  background: radial-gradient(circle, rgb(142, 217, 254) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
-header li {
-    list-style: none;
-    display: inline-block;
-    padding: 0 20px;
+h1 {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 2rem;
+  padding: 3rem;
 }
 
-header {
-    display: flex;
-    justify-content: flex-end;
+/* NAV */
+
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 5rem;
+  margin: 3rem;
+  list-style: none;
 }
 
-.title {
-    font-family: 'Space Grotesk', sans-serif;
+/* FORM */
+
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+input[type=submit] {
+  background-color: rgb(142, 217, 254);
+  color: black;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: transparent;
+  padding: 5rem;
+}
+
+/* EFFECTS */
+
+.dark-mode {
+  background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 43%, rgba(9, 9, 121, 1) 100%, rgba(0, 212, 255, 1) 100%);
+  color: rgb(255, 255, 255);
+}
+
+.dark-mode a {
+  color: white;
+}
+
+.dark-mode .btn {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.darkmode a:hover {
+  color: rgb(209, 207, 207);
 }
 
 a {
-    color: black;
+  position: relative;
+  color: #000;
+  text-decoration: none;
 }
+
+a:hover {
+  color: rgb(73, 73, 73);
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(73, 73, 73);
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
+
+.btn {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: rgb(73, 73, 73);
+}
+
+/* media query */
+
+@media screen and (max-width: 600px) {
+
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: .5rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: 0;
+    padding: .5rem;
+    background-color: rgba(190, 244, 255, 0.771);
+    border-radius: 0px 0px 0px 10px;
+    width: 20%;
+  }
+
+  .dark-mode nav ul {
+    background-color: rgba(0, 0, 0, 0.832);
+    border-radius: 0px 0px 0px 10px;
+    width: 20%;
+  }
+
+  .project-grid-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 20px;
+    gap: 20px;
+    background-color: transparent;
+  }
+}
+
+/* FOOTER */
 
 footer li {
-    list-style: none;
-    display: inline-block;
-    padding: 0 20px;
+  list-style: none;
+  display: inline-block;
+  padding: 0 20px;
 }
-
-/* RESPONSIVE NAV BAR */
-
-.navbar {
-    overflow: hidden;
-  }
-  
-  .navbar a:hover {
-    color: #ddd;
-  }
-  
-  .navbar .icon {
-    display: none;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .navbar a:not(:first-child) {display: none;}
-    .navbar a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .navbar.responsive {position: relative;}
-    .navbar.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .navbar.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
-
-
-input[type=text], select, textarea {
-    width: 100%; 
-    padding: 12px; 
-    border: 1px solid #ccc;
-    border-radius: 4px; 
-    box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px; 
-    resize: vertical 
-  }
-  
-  input[type=submit] {
-    background-color: #9d9d9d;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
